<resources>
    <string name="app_name">BookKeeping</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bookkeeping">记账</string>
    <string name="title_mine">我的</string>
    <string name="title_account">我的账户</string>
    <string name="title_record">记录</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="password_hint">请输入密码</string>
    <string name="username_hint">请输入用户名</string>
    <string name="captcha_hint">请输入验证码</string>
    <string name="send_captcha">发送验证码</string>
    <string name="login_account">登录账号</string>
    <string name="no_login">尚未登录</string>
    <string name="register_account">注册账号</string>
    <string name="register_new_user">新用户注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_or_register">登录/注册</string>
    <string name="local_db_date">本地数据上次同步于%1$s</string>
    <string name="backup_db_date">远程备份上次更新于%1$s</string>
    <string name="backup_db">备份数据库</string>
    <string name="backup_btn">备份</string>
    <string name="restore_db">恢复数据库</string>
    <string name="restore_btn">恢复</string>
    <string name="hide_text">****</string>
    <string name="summary_asset">总资产</string>
    <string name="summary_input">净投入</string>
    <string name="summary_profit">累计收益</string>
    <string name="default_num">0.00</string>
    <string name="default_rate">暂无</string>
    <string name="add_account">新建账户</string>
    <string name="account_setting">账户设置</string>
    <string name="account_name">账户名称</string>
    <string name="account_asset">账户资产</string>
    <string name="account_profit">累计收益</string>
    <string name="account_rate_of_return">年化收益率</string>
    <string name="account_name_hint">起个名字吧</string>
    <string name="account_detail">账户详情</string>
    <string name="save">保存</string>
    <string name="create">创建</string>
    <string name="type_update">更新资产</string>
    <string name="type_transfer_in">转入</string>
    <string name="type_transfer_out">转出</string>
    <string name="transfer">转入/转出</string>
    <string name="update">更新资产</string>
    <string name="title_transfer">资产进出</string>
    <string name="transfer_in">转入资产</string>
    <string name="transfer_out">转出资产</string>
    <string name="go_to_record">去记账</string>
    <string name="date">日期</string>
    <string name="account_asset_hint">请输入金额</string>
    <string name="confirm">确定</string>
    <string name="init_asset">初始资产</string>
    <string name="args_exception">参数错误</string>
    <string name="record_type">记录类型</string>
    <string name="record">更新记录</string>
    <string name="err_msg_transfer_record_date">转入/转出日期不能超过初始资产日期%1$s</string>
    <string name="err_msg_update_init_record_date">初始资产日期不能更改%1$s</string>
    <string name="err_msg_delete_init_record">初始资产不能删除</string>
    <string name="more_records">查看更多</string>
    <string name="record_detail">记录详情</string>
    <string name="legend_rate">收益率·资金加权</string>
    <string name="chart_title">收益率</string>
    <string name="chart_detail_rate">收益率·资金加权 %1$s</string>
</resources>