<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/account_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_profit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.bookkeeping.view.HidableTextView
        android:id="@+id/profit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_num"
        app:layout_constraintStart_toStartOf="@id/account_profit"
        app:layout_constraintTop_toBottomOf="@id/account_profit" />

    <TextView
        android:id="@+id/account_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/account_rate_of_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/account_profit"  />

    <TextView
        android:id="@+id/rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_rate"
        app:layout_constraintStart_toStartOf="@+id/account_rate"
        app:layout_constraintTop_toBottomOf="@id/account_rate" />

</androidx.constraintlayout.widget.ConstraintLayout>