<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/local_db_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/backup_db"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/backup_btn"
        app:layout_constraintStart_toStartOf="@+id/local_db_tv"
        app:layout_constraintTop_toBottomOf="@+id/local_db_tv" />

    <TextView
        android:id="@+id/backup_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/backup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backup_btn"
        tools:text="本地数据上次同步于xxxx年xx月xx日" />


    <TextView
        android:id="@+id/backup_db_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/restore_db"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/backup_btn"
        app:layout_constraintTop_toBottomOf="@+id/backup_btn" />

    <Button
        android:id="@+id/restore_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/restore_btn"
        app:layout_constraintStart_toStartOf="@+id/backup_db_tv"
        app:layout_constraintTop_toBottomOf="@+id/backup_db_tv" />

    <TextView
        android:id="@+id/restore_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/restore_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restore_btn"
        tools:text="远程备份上次更新于xxxx年xx月xx日" />

</androidx.constraintlayout.widget.ConstraintLayout>