<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bookkeeping.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookkeeping"
        android:name="com.example.bookkeeping.ui.bookkeeping.BookKeepingFragment"
        android:label="@string/title_bookkeeping"
        tools:layout="@layout/fragment_book_keeping">
        <action
            android:id="@+id/action_bookkeeping_to_account_setting"
            app:destination="@id/navigation_account_setting" />
        <action
            android:id="@+id/action_bookkeeping_to_account_detail"
            app:destination="@id/navigation_account_detail" />
        <action
            android:id="@+id/action_bookkeeping_to_record"
            app:destination="@id/navigation_record" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bookkeeping.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account_setting"
        android:name="com.example.bookkeeping.ui.account.AccountSettingFragment"
        tools:layout="@layout/fragment_account_setting" />

    <fragment
        android:id="@+id/navigation_account_detail"
        android:name="com.example.bookkeeping.ui.account.AccountDetailFragment"
        tools:layout="@layout/fragment_account_detail">
        <action
            android:id="@+id/action_account_detail_to_record"
            app:destination="@id/navigation_record" />
    </fragment>

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.bookkeeping.ui.record.RecordFragment"
        tools:layout="@layout/fragment_record" />
</navigation>