<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_asserts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_asserts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.bookkeeping.view.HidableTextView
        android:id="@+id/asserts_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/title_asserts"
        app:layout_constraintTop_toBottomOf="@id/title_asserts"
        tools:text="@string/default_num" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transfer_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transfer"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@id/title_asserts"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/asserts_tv"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginHorizontal="24dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/transfer_btn"/>
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>